<?xml version="1.0"?>
<package format="2">
  <name>common</name>
  <version>0.0.0</version>
  <description>The common package</description>
  <maintainer email="913982779@qq.com">winter</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
  </export>
</package>
