<?xml version="1.0"?>
<package format="2">
  <name>system_config</name>
  <version>0.0.0</version>
  <description>The system_config package</description>
  <maintainer email="913982779@qq.com">winter</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>common</depend>
  <export/>
</package>
