<?xml version="1.0"?>
<package format="2">
  <name>trajectory_optimization</name>
  <version>0.0.0</version>
  <description>The trajectory_optimization package</description>

  <maintainer email="913982779@qq.com">winter</maintainer>

  <license>GPL3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>roscpp</depend>
  <depend>voronoi_layer</depend>
  <depend>utils</depend>

</package>
