<?xml version="1.0"?>
<package format="2">
  <name>orca_controller</name>
  <version>0.0.0</version>
  <description>The orca_controller package</description>
  <maintainer email="gzy@todo.todo">gzy</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>controller</depend>
  <depend>angles</depend>
  <depend>nav_msgs</depend>
  <depend>navfn</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <nav_core plugin="${prefix}/orca_controller_plugin.xml" />
  </export>

</package>