<?xml version="1.0"?>
<package format="2">
  <name>graph_planner</name>
  <version>0.0.0</version>
  <description>The graph_planner package</description>

  <maintainer email="913982779@qq.com">winter</maintainer>

  <license>GPL3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>navfn</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>global_planner</depend>
  <depend>voronoi_layer</depend>
  <depend>utils</depend>
  <depend>curve_generation</depend>

  <export>
    <nav_core plugin="${prefix}/graph_planner_plugin.xml" />
  </export>
</package>
